--- a/VPAT.html
+++ b/VPAT.html
@@ -1,7 +1,7 @@
 ---
 layout: page-template
 title: VPAT
-image: WebAccessibility.png
+image: VPAT-Documents.png
 ---
 
 
@@ -44,14 +44,14 @@ offers to assist companiend and business with understanding and filling out a VP
 <div class="row">
   <div class="col">
     <ul>
-      <li>VPAT 508 Certification</li>
-      <li>VPAT WCAG Certification</li>
+      <li><strong>VPAT 508 Certification</strong></li>
+      <li><strong>VPAT WCAG Certification</strong></li>
     </ul>
   </div>
   <div class="col">
     <ul>
-      <li>VPAT EU Certification</li>
-      <li>VPAT Compleat Certification</li>
+      <li><strong>VPAT EU Certification</strong></li>
+      <li><strong>VPAT Compleat Certification</strong></li>
     </ul>
   </div>
 </div>
@@ -76,10 +76,10 @@ Our Web Accessibility Expert follows the WCAG Guidelines and understands how to 
   </div>
 </div>
 
-<p>It is highly recomended that you <a href="{{ site.url }}/Monioring">monitor</a> your porduct once a VPAT is completed because overtime code and content change. Our VPAT Certification is only valid for
+<p>It is highly recomended that you <a href="{{ site.url }}/Monitoring">monitor your porduct</a> once a VPAT is completed because overtime code and content change. Our VPAT Certification is only valid for
 one (1) year, after which time we will contact you for a re-evaluation audit.</p>
 
 <h2>Contact Us</h2>
 
 <p>To get your VPAT Certification or have our Expert compleat your VPAT for you just book a Free Consultation and an Accessibilty Expert contat you ASAP.</p>
-<a class="btn btn-md btn-info" href="https://kaffeinatedkodemonkey.youcanbook.me/" target="_blank">Book Free Consultation</a>
+<a class="btn btn-md btn-info" href="https://kaffeinatedkodemonkey.youcanbook.me/" target="_blank">Book a Free Consultation</a>
