--- a/VPAT.html
+++ b/VPAT.html
@@ -2,6 +2,8 @@
 layout: page-template
 title: VPAT
 image: VPAT-Documents.png
+caption: VPAT Documents - Get a Free Consultation Today!
+description: VPAT Compliant. We fill out VPAT Documents and offer Accessibilty Certifications.
 ---
 
 
