--- a/Monitoring.html
+++ b/Monitoring.html
@@ -1,9 +1,9 @@
 ---
 layout: page-template
 title: Accessibility Monitoring
-image:
-caption: 
-description:
+image: Accessibility-Monitoring.png
+caption: Accessibility Monitoring - Get a Free Consultation Today!
+description: Monitoring Accessibilty helps you keep compliant with WCAG, 508 and & EU Standards.
 ---
 
 <h2>Keeping you on top of your game</h2>
