--- a/Monitoring.html
+++ b/Monitoring.html
@@ -8,11 +8,21 @@ description: Monitoring Accessibilty helps you keep compliant with WCAG, 508 and
 
 <h2>Keeping you on top of your game</h2>
 
-<p>So far we have been talking about all this VPAT, 508, WCAG stuff but how do you keep track of it? Or do you?</p>
+<p>Kaffeinated Kodemonkey keeps companies, business, and Goverment compliant.</p>
 
-<p>Now you may already have a VPAT that you, your developer or someone else did for you. Are you aware that it is only valid
-for one (1) year? This is where we come in to save the game.</p>
+<p>A website does not stop growing or changing. It is alwasy being maintained, manages, edited and update. Weather it be daily,
+weekly, or monthly it can be exshusiting to keep up on the accessibility guidelines and requirements as you make your
+changes.</p>
 
-<p>Kaffeinated Kodemonkey help companies and business large or small Goverment or local stay compliant. We have partnerd with a company
-that has developed a platform that will crawl your website, analizie it for Accessibility and send a report to you letting you know if
-there were any issues found.</p>
+<p>Our developers build <a href="https://webaim.org/articles/pour/" target="_blank">POUR</a> websites that are accessibility drive and meet section
+508 & WCAG standards. With this level of experiance we though it was only logical to help you monitor you accessibility and keep you compliant.</p>
+
+
+<p>We have partnerd with a company that developed a platform to will crawl your website, analizie it for accessibility
+and send a report letting you know if there are any compliant issues. Our developers will resolve the compliance
+issues and keep your VPAT Certificeation up to date so that you don't have to worrie about it.</p>
+
+<h2>Book a Free Consultation</h2>
+
+<p>Talk with our Web Accesibility Expert about accessibility monitoring.</p>
+<a href="https://kaffeinatedkodemonkey.youcanbook.me/" target="_blank" data-ycbm-modal="true" class="btn btn-md btn-info">Book a Free Consultation</a>
