--- a/VPAT.html
+++ b/VPAT.html
@@ -6,152 +6,69 @@ caption: VPAT Documents - Get a Free Consultation Today!
 description: VPAT Compliant. We fill out VPAT Documents and offer Accessibilty Certifications.
 ---
 
+
+<h2>Overview</h2>
+
+<p>VPAT is the Voluntary Product Accessibility Template to evaluate accessibility standards for Section 508 (U.S.), EN 301 549 (EU), and W3C/WAI WCAG.
+Some companies are required to fill one out before they can relese a new produce, others may need one to Certify that they have meet the Accessibilty
+requirements.</p>
+
+<h2>Certifications</h2>
+<p>Kaffeinated Kodemonkey offers four (4) VPAT Certifications to verify compliance with Sections 508 & WCAG.</p>
+
+<ul>
+  <li><strong>VPAT 508 Certification</strong>: U.S. Federal accessibility standard</li>
+  <li><strong>VPAT EU Certification</strong>: European Union’s Accessibility requirements</li>
+  <li><strong>VPAT WCAG Certification</strong>: W3C/WAI’s Web Content Accessibility Guideline</li>
+  <li><strong>VPAT Full Certification</strong>: Incorporates all three of the above standards</li>
+</ul>
+
+<p>All VPAT® Certifications contain:</p>
+<ul>
+  <li>Product Description that describes the product</li>
+  <li>Evaluation Methods used to test the product’s accessibility</li>
+  <li>Notes to provide additional details concerning the product tested and the evaluation methods</li>
+</ul>
+
+<p>We provide a PDF you can disply on your website for download or send to users upon request.</p>
+
+<h2>Evaluation Audit</h2>
+
+<p>Our Web Accessibility Expert follow Section 508 & WCAG standards when evaluating your site for compliance. </br>
+The process is simple:</p>
 <div class="row">
-  <div class="col-7 offset-1">
-
-    <h2>Overview</h2>
-
-    <p>A VPAT is the Voluntary Product Accessibility Template developed by the ITI. It evaluates the leading ICT accessibility standards: Section 508 (U.S.),
-    EN 301 549 (EU), and W3C/WAI WCAG 2.x. Some companies are required to fill one out before they can relese a new produce, others may want one to Certify
-    that they have meet the Accessibilty requirements.</p>
-
-    <p>ITI has developed four (4) editions of the VPAT Document:</p>
+  <div class="col-6">
     <ul>
-      <li><strong>VPAT 2.2 508</strong>: Revised Section 508 standards – the U.S. Federal accessibility standard</li>
-      <li><strong>VPAT 2.2 EU</strong>: EN 301 549 – the European Union’s “Accessibility requirements suitable for public procurement of ICT products and services in Europe”</li>
-      <li><strong>VPAT 2.2 WCAG</strong>: WCAG 2.0 or ISO/IEC 40500 – W3C/WAI’s Web Content Accessibility Guideline</li>
-      <li><strong>VPAT 2.2 INT</strong>: Incorporates all three of the above standards.</li>
+      <li>Evaluation audit of your website</li>
+      <li>Report of all compliance issues</li>
+      <li>Explination on how to resolve issues</li>
     </ul>
-
-    <p>All four editions of the VPAT® contain:</p>
+  </div>
+  <div class="col-6">
     <ul>
-      <li>A Product Description field that briefly describes the product.</li>
-      <li>An Evaluation Methods Used field to describe methods used to test the product’s accessibility.</li>
-      <li>A Notes field for the report and for each table to provide additional detail concerning the product tested and the evaluation methods.</li>
+      <li>Re-evaluation audit to check resolution</li>
+      <li>Fillout VPAT deliver it in a PDF format</li>
+      <li>VPAT Certifications are vaild for one (1) year</li>
     </ul>
-
-    <p>Kaffeinated Kodemonkey provides you with a PDF version of the document that can either be uploaded to their website or sent by email upon request.</p>
-
-    <p><span class="text-uppercase"><strong>Please Note</strong></span>: While a VPAT® can be an essential aid in assessing the accessibility of products,
-    it is important to note that, even in cases where a product conforms to relevant standards and technical specifications, an end user may still encounter difficulties
-    utilizing it due to the nature or severity of his or her disability. On the other hand, a product that may not fully conform to all technical requirements may still
-    be perfectly accessible to an end user who has a disability, but does not need a particular accessibility feature, e.g., a large-button telephone handset for an
-    individual with a hearing disability.</p>
-
-    <p>While there may not be a perfectly accessible product, many can still be used effectively and efficiently by most people with disabilities. Kaffeinated Kodemonkey
-    offers to assist companiend and business with understanding and filling out a VPAT.</p>
-
-    <h2>Certifications</h2>
-
-    <p>Kaffeinated Kodemonkey offers four (4) VPAT Certifications to companies and business to verify that they are compliant with Sections 508 & 504.</p>
-
-    <div class="row">
-      <div class="col">
-        <ul>
-          <li><strong>VPAT 508 Certification</strong></li>
-          <li><strong>VPAT WCAG Certification</strong></li>
-        </ul>
-      </div>
-      <div class="col">
-        <ul>
-          <li><strong>VPAT EU Certification</strong></li>
-          <li><strong>VPAT Compleat Certification</strong></li>
-        </ul>
-      </div>
-    </div>
-
-    Our Web Accessibility Expert follows the WCAG Guidelines and understands how to implement them into a website or application.</p>
-
-    <p>Our evaluation process is simple:</p>
-    <div class="row">
-      <div class="col">
-        <ul>
-          <li>We run a full accessibility audit on your site</li>
-          <li>Produce a report of all accessibility issues</li>
-          <li>Create a document explaining how to resolve the issues</li>
-        </ul>
-      </div>
-      <div class="col">
-        <ul>
-          <li>Once all issues are resolved we re-run our audit to check resolutions</li>
-          <li>Fillout the VPAT and deliver it to you in a PDF format</li>
-          <li>All VPAT Certifications are vaild for one (1) year unless noted</li>
-        </ul>
-      </div>
-    </div>
-
-    <p>It is highly recomended that you <a href="{{ site.url }}/Monitoring">monitor your porduct</a> once a VPAT is completed because overtime code and content change. Our VPAT Certification is only valid for
-    one (1) year, after which time we will contact you for a re-evaluation audit.</p>
-
-    <h2>Contact Us</h2>
-
-    <p>To get your VPAT Certification or have our Expert compleat your VPAT for you just book a Free Consultation and an Accessibilty Expert contat you ASAP.</p>
-    <a class="btn btn-md btn-info" href="https://kaffeinatedkodemonkey.youcanbook.me/" target="_blank">Book a Free Consultation</a>
   </div>
-  <div class="col-4">
-    <p><img src="{{ site.url }}/assets/images/Accessibilty-Audit-Hero-Image.jpg" style="width:80%;" class="img-thumbnail img-fluid" alt="Web Accessibilty Brochure"></p>
+</div>
 
-    <!-- Begin MailChimp Signup Form -->
-    <!-- <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css"> -->
-    <style type="text/css">
-      #mc_embed_signup{background:#fff; clear:left; padding: 20px; font:14px Helvetica,Arial,sans-serif; }
-      /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-         We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-    </style>
+<p>It is highly recomended you <a href="{{ site.url }}/Monitoring">monitor your website</a> once a VPAT is complete. Overtime code and content change
+and may cause the VPAT to be demed invalide. Our VPAT Certification is only valid for one (1) year, after which time we will contact you for a
+re-evaluation audit.</p>
 
-    <div id="mc_embed_signup">
-      <form action="https://kaffeinatedkodemonkey.us11.list-manage.com/subscribe/post?u=25ed2db8c5f44be422ac9503a&amp;id=4bd59d6de7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-        <div id="mc_embed_signup_scroll">
-           <h3>Free Web Accessibility Brochure</h3>
+<h2>Disclamer</h2>
 
-           <div class="indicates-required"><span class="text-danger">*</span> indicates required</div>
-           <p>&nbsp;</p>
+<p><span class="text-uppercase"><strong>Please Note</strong></span>: A VPAT® Certification can be an essential aid in assessing the accessibility of products,
+it is important to note that in cases where a product conforms to relevant standards and technical specifications, an end user may still encounter difficulties
+utilizing the site due to the nature or severity of his or her disability. On the other hand, a product that may not fully conform to all technical requirements may still
+be perfectly accessible to an end user who has a disability, but does not need a particular accessibility feature, e.g., a large-button telephone handset for an
+individual with a hearing disability.</p>
 
-          <div class="form-group row">
-            <label for="fname" class="col-sm-3 col-form-label"><span class="text-danger">*</span> First Name:</label>
-            <div class="col-sm-7">
-              <input type="text" class="form-control" name="FNAME" id="fname" placeholder="First Name" required>
-            </div>
-          </div>
-          <div class="form-group row">
-            <label for="lname" class="col-sm-3 col-form-label"><span class="text-danger">*</span> Last Name:</label>
-            <div class="col-sm-7">
-              <input type="text" class="form-control" name="LNAME" id="lname" placeholder="Last Name" required>
-            </div>
-          </div>
-          <div class="form-group row">
-            <label for="email" class="col-sm-3 col-form-label"><span class="text-danger">*</span> Email Address:</label>
-            <div class="col-sm-7">
-              <input type="email" class="form-control" id="email" name="EMAIL" placeholder="Email Address" required>
-            </div>
-          </div>
-          <div class="form-group row">
-            <label for="phone" class="col-sm-3 col-form-label">Phone Number:</label>
-            <div class="col-sm-7">
-               <input type="text" name="PHONE" class="form-control" value="" id="phone" placeholder="(xxx) xxx-xxxx">
-           </div>
-          </div>
+<p>While there may not be a perfectly accessible product, many can still be used effectively and efficiently by most people with disabilities. Kaffeinated Kodemonkey
+offers to assist companiend with understanding a VPAT.</p>
 
-          <div id="mce-responses" class="clear">
-            <div class="response" id="mce-error-response" style="display:none"></div>
-            <div class="response" id="mce-success-response" style="display:none"></div>
-          </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+<h2>Contact Us</h2>
 
-          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_25ed2db8c5f44be422ac9503a_3b9e966271" tabindex="-1" value=""></div>
-
-          <div class="form-group row">
-           <div class="col-sm-2">
-             <button type="submit" class="btn btn-info btn-md" id="mc-embedded-subscribe" >Get Free Brochure</button>
-           </div>
-         </div>
-      </div>
-    </form>
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
-  </div>
-  <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[0]='EMAIL';ftypes[0]='email';fnames[3]='MMERGE3';ftypes[3]='phone';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-  <!--End mc_embed_signup-->
-</div><!-- Column -->
+<p>To get your VPAT Certification or have our Expert compleat your VPAT for you just book a Free Consultation and an Accessibilty Expert contat you ASAP.</p>
+<a class="btn btn-md btn-info" href="https://kaffeinatedkodemonkey.youcanbook.me/" target="_blank">Book a Free Consultation</a>
