--- a/Monitoring.html
+++ b/Monitoring.html
@@ -1,28 +1,38 @@
 ---
 layout: page-template
 title: Accessibility Monitoring
+category: VPAT
 image: Accessibility-Monitoring.png
 caption: Accessibility Monitoring - Get a Free Consultation Today!
-description: Monitoring Accessibilty helps you keep compliant with WCAG, 508 and & EU Standards.
+description: Monitoring your Web Accessibility, Section 508 compliance
 ---
 
 <h2>Keeping you on top of your game</h2>
 
-<p>Our goal is to keeps companies, business, and Goverment compliant.</p>
+<p>A website does not stop changing. It's always being maintained, managed, and edited sometimes by a team of people. It can become exhausting to keep up
+with the accessibility guidelines and requirements and making sure your team is current on WCAG and/or Section 508 standards.</p>
 
-<p>A website does not stop growing or changing. It is alwasy being maintained, manages, edited and update. Weather it be daily,
-weekly, or monthly it can be exshusiting to keep up on the accessibility guidelines and requirements as you make your
-changes.</p>
+<p>Our goal is to keeps companies, business, and Government in line with WCAG and Section 508 requirements.</p>
+
+<p>We work with an affiliate that provides us with a platform for monitoring your website. We test your site and gives you clear direction on Accessibility issues
+and how to improve them. Know which Accessibility issues your team/organization makes most frequently and become more efficient.</p>
+
+<ul>
+  <li>Track your progress to evaluate your improvement & training efforts</li>
+  <li>Incress our ROI in Marketing & SEO and start reducing your bounce rate</li>
+  <li>Drive more visitors to your site with a better user experiance</li>
+</ul>
+
+
+
 
 <p>Our developers build <a href="https://webaim.org/articles/pour/" target="_blank">POUR</a> websites that are accessibility drive and meet section
-508 & WCAG standards. With this level of experiance we though it was only logical to help you monitor you accessibility and keep you compliant.</p>
+508 & WCAG standards. With this level of experience, we thought it was only logical to help you monitor your accessibility and keep you compliant.</p>
 
 
-<p>We have partnerd with a company that developed a platform to will crawl your website, analizie it for accessibility
-and send a report letting you know if there are any compliant issues. Our developers will resolve the compliance
-issues and keep your VPAT Certificeation up to date so that you don't have to worrie about it.</p>
+<p>We include a VPAT Certification with our Monitoring packages so you can rest assured your site is compliant.</p>
 
-<h2>Book a Free Consultation</h2>
+<h2>Contact Us</h2>
 
-<p>Talk with our Web Accesibility Expert about accessibility monitoring.</p>
-<a href="https://kaffeinatedkodemonkey.youcanbook.me/" target="_blank" data-ycbm-modal="true" class="btn btn-md btn-info">Book a Free Consultation</a>
+<p>Start Monitoring your accessibility and get a VPAT Certified.</p>
+<p><a class="btn btn-md btn-success" href="https://kaffeinatedkodemonkey.youcanbook.me/" target="_blank" role="button">Talk to an Accessibility Expert TODAY!</a></p>
