--- a/508.html
+++ b/508.html
@@ -1,16 +1,17 @@
 ---
 layout: page-template
 title: Section 508 & WCAG
+category: Web Accessibility
 image: Section508.png
 ---
 
 <h2>What is Section 508</h2>
 
-<!--<p>If your business is a federal government agency, or receives funding/assistance from the federal government then you have to abid by section Section 508
+<!--<p>If your business is a federal government agency, or receives funding/assistance from the federal government then you have to abide by section Section 508
 requirements.</p>-->
 
-<p>In 1998, Congress amended the Rehabilitation Act of 1973 requiring Federal agencies to make electronic documnts accessible to people with disabilities.
-Section 508 applies to all Federal agencies when it pertains to electronic and information technology. Government gencies must give disabled employees and members
+<p>In 1998, Congress amended the Rehabilitation Act of 1973 requiring Federal agencies to make electronic documents accessible to people with disabilities.
+Section 508 applies to all Federal agencies when it pertains to electronic and information technology. Government agencies must give disabled employees and members
 of the public access to the same or comparable information as they do others.</p>
 
 <p>The <a href="https://www.access-board.gov/" target="_blank">U.S. Access Board</a> is responsible for developing accessibility standards that govern Federal
@@ -18,18 +19,18 @@ procurement practices. January 2017, they issued a final rule that updated acces
 
 <p>The refresh reorganized Section 508 Standards and Section 255 Guidelines in response to market trends and innovations in technology. The refresh also
 harmonized these requirements with other guidelines and standards both in the U.S. and abroad, including standards issued by the European Commission, and
-W3C gidelines know as WCA.</p>
+W3C guidelines know as WCA.</p>
 
 <p>For more understanding of Section 508 and the Revised Standards you can visit the <a href="https://www.section508.gov/manage/laws-and-policies" target="_blank">GSA
 Government-wide IT Accessibility Program</a>.</p>
 
 <h2>What is WCAG</h2>
 
-<p>Web Content Accessibility Guidelines (WCAG), developed through the the World Wide Web Consortium (W3C) process in cooperation with individuals and
+<p>Web Content Accessibility Guidelines (WCAG), developed through the World Wide Web Consortium (W3C) process in cooperation with individuals and
 organizations around the world, with a goal of providing a single shared standard for web content accessibility that meets the needs of individuals,
 organizations, and governments internationally.</p>
 
-<p>The WCAG documents explain how to make web content more accessible to people with disabilities. Web “content” generally refers to the information in a web
+<p>The WCAG documents explain how to make web content more accessible to people with disabilities. Web "content" generally refers to the information in a web
 page or web application, including:</p>
 
 <ul>
@@ -38,21 +39,7 @@ page or web application, including:</p>
 </ul>
 <p>WCAG is becoming a globally recognized voluntary consensus standard for web content and Information and Communication Technology (ICT).</p>
 
-<h2>We are making it easy</h2>
-<p>Kaffeinated Kodemonkey is an Accessibility Driven Development company. We believe in designing <strong><em>POUR</em></strong> websites that follow the
-WCAG princapals of accessibility and encourages developers to think through the process conceptually. The four main guiding principles of accessibility are:</p>
-<ul>
-  <li><strong>P</strong>erceivable</li>
-  <li><strong>O</strong>perable</li>
-  <li><strong>U</strong>nderstandable</li>
-  <li><strong>R</strong>obust</li>
-</ul>
+<h2>Contact Us</h2>
 
-<p>It is sufficient to say that putting the <strong><em>POUR</em></strong> principles to work helps put people at the center of the process, which, in the end, is the whole reason for
-everything we do.</p>
-
-<h2>Contact our POUR Developers</h2>
-
-<p>For a <strong><em>POUR</em></strong> website or for use to look at your current site, Book a Free Consultation with our
-<strong><em>POUR</em></strong> Team.</p>
-<p><a class="btn btn-lg btn-info" href="https://kaffeinatedkodemonkey.youcanbook.me/" target="_blank" role="button">Book a Free Consultation</a></p>
+<p>Get your VPAT Certification or start Monitoring your accessibility.</p>
+<p><a class="btn btn-md btn-success" href="https://kaffeinatedkodemonkey.youcanbook.me/" target="_blank" role="button">Talk to an Accessibility Expert TODAY!</a></p>
