--- a/VPAT.html
+++ b/VPAT.html
@@ -1,36 +1,36 @@
 ---
 layout: page-template
-title: VPAT
+title: VPAT Evaluation and Certification
+category: VPAT
 image: VPAT-Documents.png
 caption: VPAT Documents - Get a Free Consultation Today!
-description: VPAT Compliant. We fill out VPAT Documents and offer Accessibilty Certifications.
+description: VPAT Compliant. We fill out VPAT Documents and offer Accessibility Certifications.
 ---
-
 
 <h2>Overview</h2>
 
-<p>Our expeties lies is in accessibility driven development. Weather we are designing a website or Evaluating for a VPAT Certification we always
-use POUR design principals by WCAG to meets accessibility requirments.</p>
+<p>Our expertise lies in accessibility driven development. Whether we are designing a website or Evaluating for a VPAT Certification we always
+use POUR design principals by WCAG to meets accessibility requirements.</p>
 
-<p>The Voluntary Product Accessibility Template (VPAT) is uesed to evaluate accessibility standards for Section 508 (U.S.), EN 301 549 (EU), and W3C/WAI WCAG.
-Some companies are required to fill out a VPAT before they can relese a new produce, others may need one to Certify that they have meet the Accessibilty
+<p>The Voluntary Product Accessibility Template (VPAT) is used to evaluate accessibility standards for Section 508 (U.S.), EN 301 549 (EU), and W3C/WAI WCAG.
+Some companies are required to fill out a VPAT before they can release a new product, others may need one to Certify that they have met the Accessibility
 requirements. We use the VPAT to certify that our sites are ADA compliant.</p>
 
 <h2>VPAT Evaluation</h2>
 
-<p>A VPAT Evaluation is a process we use to examin your site and verify that accessibility standards have been stified to level AA.
-During this process we will crawl your site, use eveluation tools, as-well-as manualy go through the site using assitive technologies.
+<p>A VPAT Evaluation is a process we use to examine your site and verify that accessibility standards have been satisfied to level AA.
+During this process, we will crawl your site, use evaluation tools, as-well-as manually go through the site using assistive technologies.
 We test the site for hands-free access, vision impairedness, low-vision, color-blind, learning disabilities, deafness or low-hearing, just to name a few</p>
 
 <h2>VPAT Certifications</h2>
-<p>Our certification process is easy. After we compleat an evauation we use one of the four (4) VPAT documents to Certifications your site meets the
-required standards and is compliance with Sections 508, EU, or WCAG. </p>
+<p>Our certification process is easy. After we complete an evaluation we use one of the four (4) VPAT documents to Certifications your site meets the
+required standards and is in compliance with Sections 508, EU, or WCAG. </p>
 
 <ul>
-  <li><strong>VPAT 508 Certification</strong>: U.S. Federal accessibility standard</li>
-  <li><strong>VPAT EU Certification</strong>: European Union’s Accessibility requirements</li>
-  <li><strong>VPAT WCAG Certification</strong>: W3C/WAI’s Web Content Accessibility Guideline</li>
-  <li><strong>VPAT Full Certification</strong>: Incorporates all three of the above standards</li>
+  <li><strong>VPAT 508 Certification</strong>: U.S. Federal accessibility standard for 508 Compliance</li>
+  <li><strong>VPAT EU Certification</strong>: European Union’s Accessibility requirements for EU compliance</li>
+  <li><strong>VPAT WCAG Certification</strong>: W3C/WAI’s Web Content Accessibility Guideline for WCAG compliance</li>
+  <li><strong>VPAT Full Certification</strong>: Incorporates all three of the above standards for Full Compliance</li>
 </ul>
 
 <p>All VPAT® Certifications contain:</p>
@@ -40,9 +40,9 @@ required standards and is compliance with Sections 508, EU, or WCAG. </p>
   <li>Notes to provide additional details concerning the product tested and the evaluation methods</li>
 </ul>
 
-<p>We provide a PDF you can disply on your website for download or send to users upon request.</p>
+<p>We provide a PDF you can display on your website for download or send to users upon request.</p>
 
 <h2>Contact Us</h2>
 
-<p>To get your VPAT Certification or have our Expert compleat your VPAT for you just book a Free Consultation and an Accessibilty Expert contat you ASAP.</p>
-<a class="btn btn-md btn-info" href="https://kaffeinatedkodemonkey.youcanbook.me/" target="_blank">Book a Free Consultation</a>
+<p>Get your VPAT Certification or start Monitoring your accessibility.</p>
+<p><a class="btn btn-md btn-success" href="https://kaffeinatedkodemonkey.youcanbook.me/" target="_blank" role="button">Talk to an Accessibility Expert TODAY!</a></p>
