--- a/Monitoring.html
+++ b/Monitoring.html
@@ -26,11 +26,11 @@ and how to improve them. Know which Accessibility issues your team/organization 
 
 
 
-<p>Our developers build <a href="https://webaim.org/articles/pour/" target="_blank">POUR</a> websites that are accessibility drive and meet section
+<p>Our developers build <a href="https://webaim.org/articles/pour/" target="_blank"><em>POUR</em></a> websites that are accessibility drive and meet section
 508 & WCAG standards. With this level of experience, we thought it was only logical to help you monitor your accessibility and keep you compliant.</p>
 
 
-<p>We include a VPAT Certification with our Monitoring packages so you can rest assured your site is compliant.</p>
+<p>We include a <a href="{{site.url}}/VPAT">VPAT Certification</a> with our Monitoring packages so you can rest assured your site is compliant.</p>
 
 <h2>Contact Us</h2>
 
