--- a/VPAT.html
+++ b/VPAT.html
@@ -12,7 +12,7 @@ description: VPAT Compliant. We fill out VPAT Documents and offer Accessibility 
 <p>Our expertise lies in accessibility driven development. Whether we are designing a website or Evaluating for a VPAT Certification we always
 use POUR design principals by WCAG to meets accessibility requirements.</p>
 
-<p>The Voluntary Product Accessibility Template (VPAT) is used to evaluate accessibility standards for Section 508 (U.S.), EN 301 549 (EU), and W3C/WAI WCAG.
+<p>The Voluntary Product Accessibility Template (VPAT), it is used to evaluate accessibility standards for Section 508 (U.S.), EN 301 549 (EU), and W3C/WAI WCAG.
 Some companies are required to fill out a VPAT before they can release a new product, others may need one to Certify that they have met the Accessibility
 requirements. We use the VPAT to certify that our sites are ADA compliant.</p>
 
