--- a/508.html
+++ b/508.html
@@ -2,10 +2,11 @@
 layout: page-template
 title: Section 508 & WCAG
 category: Web Accessibility
+caption: Understading 508 & WCAG
 image: Section508.png
 ---
 
-<h2>What is Section 508</h2>
+<h1>What is Section 508</h1>
 
 <!--<p>If your business is a federal government agency, or receives funding/assistance from the federal government then you have to abide by section Section 508
 requirements.</p>-->
