--- a/508.html
+++ b/508.html
@@ -1,9 +1,11 @@
 ---
 layout: page-template
-title: Section 508 & WCAG
+title: VPAT 508 Compliance
 category: Web Accessibility
 caption: Understading 508 & WCAG
+description: What is Secion 508 & WCAG and what does it all mean
 image: Section508.png
+alt: Section 508 Requirments
 ---
 
 <h1>What is Section 508</h1>
@@ -42,5 +44,5 @@ page or web application, including:</p>
 
 <h2>Contact Us</h2>
 
-<p>VPAT Certification and Evaluations. Will your site pass the WCAG standards? Find out and start fixing them <span class="text-uppercase text-danger">TODAY</span>!</p>
+<p>WCAG Certification and Evaluations. Will your site pass the WCAG standards? Find out and start fixing them <span class="text-uppercase text-danger">TODAY</span>!</p>
 <p><a class="btn btn-md btn-info" href="https://kaffeinatedkodemonkey.youcanbook.me/" target="_blank" role="button">Talk to an Accessibility Expert TODAY!</a></p>
