--- a/Monitoring.html
+++ b/Monitoring.html
@@ -30,9 +30,9 @@ and how to improve them. Know which Accessibility issues your team/organization 
 508 & WCAG standards. With this level of experience, we thought it was only logical to help you monitor your accessibility and keep you compliant.</p>
 
 
-<p>We include a <a href="{{site.url}}/VPAT">VPAT Certification</a> with our Monitoring packages so you can rest assured your site is compliant.</p>
+<p>We include a <a href="{{site.url}}/VPAT">WCAG Certification</a> with our Monitoring packages so you can rest assured your site is compliant.</p>
 
 <h2>Contact Us</h2>
 
-<p>Start Monitoring your accessibility and get a VPAT Certified.</p>
+<p>Start Monitoring your accessibility and get a WCAG Certified.</p>
 <p><a class="btn btn-md btn-info" href="https://kaffeinatedkodemonkey.youcanbook.me/" target="_blank" role="button">Talk to an Accessibility Expert TODAY!</a></p>
