--- a/VPAT-Newsletter.html
+++ b/VPAT-Newsletter.html
@@ -3,6 +3,7 @@ layout: page-template
 title: VPAT Newsletter
 category: news, Resorces
 image: NewsResources.png
+alt: Accessibilty News and Resorces
 caption: Accessibility Monitoring - Get a Free Consultation Today!
 description: Updates and Resources for Accessibilty in a digital world!
 ---
