--- a/VPAT.html
+++ b/VPAT.html
@@ -3,44 +3,46 @@ layout: page-template
 title: VPAT Evaluation and Certification
 category: VPAT
 image: VPAT-Documents.png
-caption: VPAT Documents - Get a Free Consultation Today!
+alt: WCAG Certification
+caption: WCAG Certification & VPAT Documents - Get a Free Consultation Today!
 description: VPAT Compliant. We fill out VPAT Documents and offer Accessibility Certifications.
 ---
 
-<h1>Overview</h1>
+<h1>VPAT Document</h1>
 
-<p>Our expertise lies in accessibility driven development. Whether we are designing a website or Evaluating for a VPAT Certification we always
-use POUR design principals by WCAG to meets accessibility requirements.</p>
+<p>Our expertise lies in accessibility driven development. Whether we are designing a website or Evaluating for a <strong>WCAG</strong> Certification we always
+use <span class="text-uppercase"><strong><em><a href="https://www.kaffeinatedkodemonkey.com/faq#collapseThree">POUR</a></em></strong></span> design principals by <strong>WCAG</strong> to meets accessibility requirements.</p>
 
-<p>The Voluntary Product Accessibility Template (VPAT), it is used to evaluate accessibility standards for Section 508 (U.S.), EN 301 549 (EU), and W3C/WAI WCAG.
+<p>We use the <span class="text-dark">Voluntary Product Accessibility Template (VPAT)</span>, for our <strong>WCAG</strong> Certifications that follows the accessibility standards for Section 508 (U.S.), EN 301 549 (EU), and W3C/WAI <strong>WCAG</strong>.
 Some companies are required to fill out a VPAT before they can release a new product, others may need one to Certify that they have met the Accessibility
 requirements. We use the VPAT to certify that our sites are ADA compliant.</p>
 
-<h2>Accessibility Evaluation</h2>
+<h1>Accessibility Evaluation</h1>
 
-<p>A VPAT Evaluation is a process we use to examine your site and verify that accessibility standards have been satisfied to level AA.
+<p>An Accessibility Evaluation is a process we use to examine your site and verify that accessibility standards have been satisfied to level AA.
 During this process, we will crawl your site, use evaluation tools, as-well-as manually go through the site using assistive technologies.
-We test the site for hands-free access, vision impairedness, low-vision, color-blind, learning disabilities, deafness or low-hearing, just to name a few</p>
+We test the site for hands-free access, vision impairedness, low-vision, color-blind, learning disabilities, deafness or low-hearing, just to name a few.</p>
 
-<h2>VPAT Certification</h2>
+<h1>WCAG Certification</h1>
 <p>Our certification process is easy. After we complete an evaluation we use one of the four (4) VPAT documents to Certifications your site meets the
-required standards and is in compliance with Sections 508, EU, or WCAG. </p>
+required standards and is in compliance with <strong>WCAG</strong>, Sections 508, and/or EU. </p>
 
 <ul>
-  <li><strong>VPAT 508 Certification</strong>: U.S. Federal accessibility standard for 508 Compliance</li>
-  <li><strong>VPAT EU Certification</strong>: European Union’s Accessibility requirements for EU compliance</li>
-  <li><strong>VPAT WCAG Certification</strong>: W3C/WAI’s Web Content Accessibility Guideline for WCAG compliance</li>
-  <li><strong>VPAT Full Certification</strong>: Incorporates all three of the above standards for Full Compliance</li>
+  <li><strong>WCAG 508 Certification</strong>: U.S. Federal accessibility standard for 508 Compliance</li>
+  <li><strong>WCAG EU Certification</strong>: European Union’s Accessibility requirements for EU compliance</li>
+  <li><strong>WCAG Certification</strong>: W3C/WAI’s Web Content Accessibility Guideline for <strong>WCAG</strong> compliance</li>
+  <li><strong>WCAG Full Certification</strong>: Incorporates all three of the above standards for Full Compliance</li>
 </ul>
 
-<p>All VPAT® Certifications contain:</p>
+<h2>WCAG Certifications contain:</h2>
 <ul>
-  <li>Product Description that describes the product</li>
+  <li>Full Evaluation of the site with a How-To-Fi</li>
   <li>Evaluation Methods used to test the product’s accessibility</li>
   <li>Notes to provide additional details concerning the product tested and the evaluation methods</li>
 </ul>
 
-<p>We provide a PDF you can display on your website for download or send to users upon request.</p>
+<p>We provide a PDF stamped with one of our certification logos intcating the level of certifiication your
+site has recive. You can display the PDF on your website for download or send to users upon request.</p>
 
 <h2>Contact Us</h2>
 
