--- a/508.html
+++ b/508.html
@@ -8,7 +8,7 @@ image: Section508.png
 alt: Section 508 Requirments
 ---
 
-<h1>What is Section 508</h1>
+<h1>Section 508 Compliance</h1>
 
 <!--<p>If your business is a federal government agency, or receives funding/assistance from the federal government then you have to abide by section Section 508
 requirements.</p>-->
@@ -27,7 +27,7 @@ W3C guidelines know as WCA.</p>
 <p>For more understanding of Section 508 and the Revised Standards you can visit the <a href="https://www.section508.gov/manage/laws-and-policies" target="_blank">GSA
 Government-wide IT Accessibility Program</a>.</p>
 
-<h2>What is WCAG</h2>
+<h2>WCAG Compliance</h2>
 
 <p>Web Content Accessibility Guidelines (WCAG), developed through the World Wide Web Consortium (W3C) process in cooperation with individuals and
 organizations around the world, with a goal of providing a single shared standard for web content accessibility that meets the needs of individuals,
