--- a/508.html
+++ b/508.html
@@ -29,7 +29,7 @@ Government-wide IT Accessibility Program</a>.</p>
 
 <h2>WCAG Compliance</h2>
 
-<p>Web Content Accessibility Guidelines (WCAG), developed through the World Wide Web Consortium (W3C) process in cooperation with individuals and
+<p><a href="https://www.w3.org/WAI/standards-guidelines/wcag/" target="_blank">Web Content Accessibility Guidelines (WCAG)</a>, developed through the World Wide Web Consortium (W3C) process in cooperation with individuals and
 organizations around the world, with a goal of providing a single shared standard for web content accessibility that meets the needs of individuals,
 organizations, and governments internationally.</p>
 
