--- a/508.html
+++ b/508.html
@@ -37,8 +37,8 @@ organizations, and governments internationally.</p>
 page or web application, including:</p>
 
 <ul>
-  <li>natural information such as text, images, and sounds</li>
-  <li>code or markup that defines structure, presentation, etc.</li>
+  <li>Natural information such as text, images, and sounds</li>
+  <li>Code or markup that defines structure, presentation, etc.</li>
 </ul>
 <p>WCAG is becoming a globally recognized voluntary consensus standard for web content and Information and Communication Technology (ICT).</p>
 
