--- a/VPAT.html
+++ b/VPAT.html
@@ -19,13 +19,16 @@ requirements. We use the VPAT to certify that our sites are ADA compliant.</p>
 
 <h1>Accessibility Evaluation</h1>
 
-<p>An Accessibility Evaluation is a process we use to examine your site and verify that accessibility standards have been satisfied to level AA.
-During this process, we will crawl your site, use evaluation tools, as-well-as manually go through the site using assistive technologies.
-We test the site for hands-free access, vision impairedness, low-vision, color-blind, learning disabilities, deafness or low-hearing, just to name a few.</p>
+<p>Accessibility Evaluation is a process of examining website or application to verify it meets the <strong>WCAG</strong> accessibility standards up to level AA.
+This process is done through an automated evaluation via our accessibility script to programming analyzes the structure of each page.</p>
+
+<p>This gives our Accessibility Expert a deeper analysis of each page. By return the number of Errors – Alerts – Features – Structural Elements – HTML5 &
+Aria Constant Errors our expert can further test the site for hands-free access, vision impairedness, low-vision, color-blind, learning disabilities,
+deafness,low-hearing, and more through assistive technology.</p>
 
 <h1>WCAG Certification</h1>
-<p>Our certification process is easy. After we complete an evaluation we use one of the four (4) VPAT documents to Certifications your site meets the
-required standards and is in compliance with <strong>WCAG</strong>, Sections 508, and/or EU. </p>
+<p>Kaffeinated Kodemonkey offers four (4) types of Certifications based on the use of the VPAT Document to verify that your site or application
+meets the WCAG criteria.</p>
 
 <ul>
   <li><strong>WCAG 508 Certification</strong>: U.S. Federal accessibility standard for 508 Compliance</li>
@@ -34,15 +37,8 @@ required standards and is in compliance with <strong>WCAG</strong>, Sections 508
   <li><strong>WCAG Full Certification</strong>: Incorporates all three of the above standards for Full Compliance</li>
 </ul>
 
-<h2>WCAG Certifications contain:</h2>
-<ul>
-  <li>Full Evaluation of the site with a How-To-Fi</li>
-  <li>Evaluation Methods used to test the product’s accessibility</li>
-  <li>Notes to provide additional details concerning the product tested and the evaluation methods</li>
-</ul>
-
-<p>We provide a PDF stamped with one of our certification logos intcating the level of certifiication your
-site has recive. You can display the PDF on your website for download or send to users upon request.</p>
+<p>Each Certification is provided in a PDF format stamped with one of our certification logos indicating the level of certification your
+site has received. You can display the PDF on your website for download or send to users upon request.</p>
 
 <h2>Contact Us</h2>
 
