--- a/VPAT.html
+++ b/VPAT.html
@@ -13,22 +13,28 @@ description: VPAT Compliant. We fill out VPAT Documents and offer Accessibility 
 <p>Our expertise lies in accessibility driven development. Whether we are designing a website or Evaluating for a <strong>WCAG</strong> Certification we always
 use <span class="text-uppercase"><strong><em><a href="https://www.kaffeinatedkodemonkey.com/faq#collapseThree">POUR</a></em></strong></span> design principals by <strong>WCAG</strong> to meets accessibility requirements.</p>
 
-<p>We use the <span class="text-dark">Voluntary Product Accessibility Template (VPAT)</span>, for our <strong>WCAG</strong> Certifications that follows the accessibility standards for Section 508 (U.S.), EN 301 549 (EU), and W3C/WAI <strong>WCAG</strong>.
+<p>We use the <strong>Voluntary Product Accessibility Template (VPAT)</strong>, for our <strong>WCAG</strong> Certifications that follows the accessibility standards for Section 508 (U.S.), EN 301 549 (EU), and W3C/WAI <strong>WCAG</strong>.
 Some companies are required to fill out a VPAT before they can release a new product, others may need one to Certify that they have met the Accessibility
 requirements. We use the VPAT to certify that our sites are ADA compliant.</p>
 
 <h1>Accessibility Evaluation</h1>
 
-<p>Accessibility Evaluation is a process of examining website or application to verify it meets the <strong>WCAG</strong> accessibility standards up to level AA.
+<p>Accessibility Evaluation is a process of examining a product to verify it meets the <strong>WCAG</strong> criteria standards up to level AA.
 This process is done through an automated evaluation via our accessibility script to programming analyzes the structure of each page.</p>
 
 <p>This gives our Accessibility Expert a deeper analysis of each page. By return the number of Errors – Alerts – Features – Structural Elements – HTML5 &
 Aria Constant Errors our expert can further test the site for hands-free access, vision impairedness, low-vision, color-blind, learning disabilities,
 deafness,low-hearing, and more through assistive technology.</p>
 
+<p>Once completed we will submit a How-To-Fix document outlining any issues and how to resolve them.</p>
+
 <h1>WCAG Certification</h1>
-<p>Kaffeinated Kodemonkey offers four (4) types of Certifications based on the use of the VPAT Document to verify that your site or application
-meets the WCAG criteria.</p>
+<p>In order for your product to become WCAG Certified the VPAT stasts it has to meet all WCAG critera to be considerd compliant.</p>
+
+<p>Therefore we will conduct a full evealuation and submit a How-To-Fix document notating any issues found that need to be resolved for us
+to issue a WCAG Certification. In some cases we can issue a partial certification that allows you time to resolve issues and become completely certified.</p>
+
+<p>Kaffeinated Kodemonkey offers four (4) types of Certifications:</p>
 
 <ul>
   <li><strong>WCAG 508 Certification</strong>: U.S. Federal accessibility standard for 508 Compliance</li>
@@ -37,10 +43,11 @@ meets the WCAG criteria.</p>
   <li><strong>WCAG Full Certification</strong>: Incorporates all three of the above standards for Full Compliance</li>
 </ul>
 
-<p>Each Certification is provided in a PDF format stamped with one of our certification logos indicating the level of certification your
-site has received. You can display the PDF on your website for download or send to users upon request.</p>
+
+<p>Each Certification is provided in a PDF format stamped with our certification logo indicating the level of compliance. <br />
+You can display the PDF on your website for download or send to users upon request.</p>
 
 <h2>Contact Us</h2>
 
-<p>If you have a VPAT or have been requested to fill one out contact us we will help you complete the form with a full evealuation.</p>
-<p><a class="btn btn-md btn-info" href="https://kaffeinatedkodemonkey.youcanbook.me/" target="_blank" role="button">We Complete VPAT Documents</a></p>
+<p>If you have been requested to fill a VPAT contact us, we will help you complete the form with a full evealuation and certification.</p>
+<p><a href="https://kaffeinatedkodemonkey.youcanbook.me/" data-ycbm-modal="true" class="btn btn-danger mt-1">Become WCAG Certified Today!</a></p>
