--- a/Monitoring.html
+++ b/Monitoring.html
@@ -7,32 +7,36 @@ caption: Accessibility Monitoring - Get a Free Consultation Today!
 description: Monitoring your Web Accessibility, Section 508 compliance
 ---
 
-<h1>Keeping you on top of your game</h1>
+<h2>Why Monitor Accessibility?</h2>
 
 <p>A website does not stop changing. It's always being maintained, managed, and edited sometimes by a team of people. It can become exhausting to keep up
 with the accessibility guidelines and requirements and making sure your team is current on WCAG and/or Section 508 standards.</p>
 
-<p>Our goal is to keeps companies, business, and Government in line with WCAG and Section 508 requirements.</p>
+<p>Our goal is to keep companies, business, and Government in line with WCAG and Section 508 requirements.</p>
 
-<p>We work with an affiliate that provides us with a platform for monitoring your website. We test your site and gives you clear direction on Accessibility issues
-and how to improve them. Know which Accessibility issues your team/organization makes most frequently and become more efficient.</p>
+<p>We offer a platofrm that helps monitor your website for accessibitiy and nitofies you of any Accessibility issues and how to improve them.
+Knowing which Accessibility issues your team/organization makes most frequently you can offer in house training and become more efficient.</p>
 
-<ul>
-  <li>Track your progress to evaluate your improvement & training efforts</li>
-  <li>Incress our ROI in Marketing & SEO and start reducing your bounce rate</li>
-  <li>Drive more visitors to your site with a better user experiance</li>
-</ul>
+<h2>Accessibility Monitoring Includes:</h2>
 
+<p><strong>Unlimited Sites & Scanning:</strong> You can have as many websites in your account as you want, as long as they are all websites owned by your organization and
+are for your organization. You can rescan your pages as many times and as often as you want. You can scan on demand, scan at scheduled intervals (weekly, monthly, quarterly, etc.), or do both.</p>
 
+<p><strong>Accessible Reports:</strong> Dashboard reporting granted with "view only" access and on-demand and scheduled email reports</p>
 
-
-<p>Our developers build <a href="https://webaim.org/articles/pour/" target="_blank"><em>POUR</em></a> websites that are accessibility drive and meet section
-508 & WCAG standards. With this level of experience, we thought it was only logical to help you monitor your accessibility and keep you compliant.</p>
+<p><strong>Track progress over time:</strong> Track your whole organization, sub-groups, and individual websites and Monitor Alerts and Errors as they decrease or increase.</p>
 
 
-<p>We include a <a href="{{site.url}}/VPAT">WCAG Certification</a> with our Monitoring packages so you can rest assured your site is compliant.</p>
+<p><strong>Full access to manage pages:</strong> You can choose which pages from your websites count against your unique page count. You can choose to add the whole website, or you can choose to include or exclude specific directories or pages.</p>
+
+<p><strong>Resolusion Support Team:</strong> We work with you to onboard your websites, set which pages to scan, and provide training and support for your key user(s). We also have a growing repository of guides and support documents. </p>
+
 
 <h2>Contact Us</h2>
 
-<p>Start Monitoring your accessibility and get a WCAG Certified.</p>
+<p>Our Accessible Expert is also experienced in developing websites that follow the WCAG Principles an can answer any question aobut web accessibitiy, WCAG, 508,
+or VPAT documents. With this level of experience, we thought it was only logical to help you monitor your accessibility and keep you compliant.</p>
+
+<p>We include a <a href="{{site.url}}/VPAT">WCAG Certification</a> with our Monitoring packages so you can rest assured your site is compliant.</p>
+
 <p><a class="btn btn-md btn-info" href="https://kaffeinatedkodemonkey.youcanbook.me/" target="_blank" role="button">Talk to an Accessibility Expert TODAY!</a></p>
