--- a/VPAT.html
+++ b/VPAT.html
@@ -37,10 +37,10 @@ to issue a WCAG Certification. In some cases we can issue a partial certificatio
 <p>Kaffeinated Kodemonkey offers four (4) types of Certifications:</p>
 
 <ul>
-  <li><strong>WCAG 508 Certification</strong>: U.S. Federal accessibility standard for 508 Compliance</li>
-  <li><strong>WCAG EU Certification</strong>: European Union’s Accessibility requirements for EU compliance</li>
   <li><strong>WCAG Certification</strong>: W3C/WAI’s Web Content Accessibility Guideline for <strong>WCAG</strong> compliance</li>
-  <li><strong>WCAG Full Certification</strong>: Incorporates all three of the above standards for Full Compliance</li>
+  <li><strong>WCAG-508 Certification</strong>: WCAG plus U.S. Federal accessibility standard for 508 Compliance</li>
+  <li><strong>WCAG-EU Certification</strong>: WCAG plus European Union’s Accessibility requirements for EU compliance</li>
+  <li><strong>WCAG-Int Certification</strong>: Incorporates all three of the above standards for Full Compliance</li>
 </ul>
 
 
